--- a/css/main.css
+++ b/css/main.css
@@ -31,6 +31,14 @@ b {
     font-family: 'PoppinsMedium', 'Rubik', sans-serif;
 }
 
+.color-primary {
+    color: var(--color-primary);
+}
+
+a.navbar-brand {
+    margin-left: -25px;
+}
+
 .nav-link {
     color: var(--color-black) !important;
     padding: 0 35px 0 35px !important;
@@ -61,4 +69,26 @@ b {
     border-radius: 15px;
     text-align: center;
     padding-top: 6px;
+}
+
+.banner {
+    padding-top: 110px;
+    padding-bottom: 200px;
+}
+
+.text-banner {
+    flex-direction: column;
+    justify-content: center;
+    margin-bottom: 60px;
+}
+
+.text-banner h1 {
+    color: var(--color-black);
+    font-size: 60px;
+}
+
+.text-banner p {
+    margin-top: 15px;
+    margin-bottom: 15px;
+    font-size: 20px;
 }
