--- a/css/main.css
+++ b/css/main.css
@@ -92,3 +92,12 @@ a.navbar-brand {
     margin-bottom: 15px;
     font-size: 20px;
 }
+
+.bnt-yellow {
+    background-color: var(--color-primary);
+    color: var(--color-white) !important;
+    border-radius: 20px;
+    padding: 15px 25px;
+    font-size: 20px;
+    box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
+}
