--- a/css/main.css
+++ b/css/main.css
@@ -62,3 +62,13 @@ b {
     text-align: center;
     padding-top: 6px;
 }
+
+.btn-sm {
+    padding: 9px 15px !important;
+    border-radius: 15px !important;
+    font-size: 18px !important;
+}
+
+.btn-social {
+    width: 50px;
+}
