--- a/css/main.css
+++ b/css/main.css
@@ -112,3 +112,20 @@ a.navbar-brand {
     box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
 
 }
+
+.card-banner {
+    height: 450px;
+    width: 450px;
+    border-radius: 170px;
+    background-color: #f4c949;
+    position: absolute;
+    right: 0;
+    top: -80px;
+}
+
+.img-banner {
+    position: absolute;
+    width: 570px;
+    top: 30px;
+    right: 15px;
+}
