--- a/css/main.css
+++ b/css/main.css
@@ -104,7 +104,7 @@ a.navbar-brand {
     font-size: 20px;
 }
 
-.bnt-yellow {
+.btn-yellow {
     background-color: var(--color-primary);
     color: var(--color-white) !important;
     border-radius: 20px;
@@ -142,8 +142,59 @@ a.navbar-brand {
     height: 45px;
     position: absolute;
     margin-left: -60px;
-    margin-top: 8px;
+    margin-top: -8px;
     border-radius: 15px;
     text-align: center;
     padding: 8px;
+}
+
+.btn-sm {
+    padding: 9px 15px!important;
+    border-radius: 15px!important;
+    font-size: 18px!important;
+}
+
+.btn-social {
+    width: 50px;
+}
+
+.card-banner {
+    height: 450px;
+    width: 450px;
+    border-radius: 170px;
+    background-color: #f4c949;
+    position: absolute;
+    right: 0;
+    top: -80px;
+}
+
+.img-banner img {
+    position: absolute;
+    width: 570px;
+    top: 30px;
+    right: 15px;
+}
+
+.card {
+    border-radius: 20px;
+    padding: 15px 20px;
+    font-size: 20px;
+    box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1)!important;
+    border: none!important;
+}
+
+.card-case {
+    width: 350px;
+    font-size: 14px;
+    position: absolute;
+    right: 0;
+    bottom: -75px;
+}
+
+.card-case-name {
+    position: absolute;
+    font-size: 12px;
+    color: var(--color-primary);
+    right: 20px;
+    bottom: 10px;
 }
