--- a/css/main.css
+++ b/css/main.css
@@ -147,3 +147,20 @@ a.navbar-brand {
     text-align: center;
     padding: 8px;
 }
+
+.services {
+    padding: 100px 0 150px 0;
+}
+
+.hint-title {
+    color: var(--color-primary);
+    font-size: 16px;
+    text-transform: uppercase;
+    letter-spacing: 5px;
+}
+
+.title {
+    color: var(--color-black);
+    font-size: 40px;
+    margin: 5px 0 30px 0;
+}
