--- a/css/main.css
+++ b/css/main.css
@@ -251,3 +251,8 @@ a.navbar-brand {
     height: 500px;
     background-image: url(../img/bg-icons-2.png);
 }
+
+.menu {
+    padding-top: 50px;
+    padding-bottom: 150px;
+}
