--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,7 @@
 :root {
     --color-bg: #fffdf7;
     --color-black: #212121;
+    --color-black-heavy: #000;
     --color-text: #4f4f4f;
     --color-text-out: #90908e;
     --color-primary: #ffbf00;
@@ -252,6 +253,14 @@ a.navbar-brand {
     background-image: url(../img/bg-icons-2.png);
 }
 
+.background-menu {
+    position: absolute;
+    left: 0;
+    right: 0;
+    height: 500px;
+    background-image: url(../img/bg-icons-1.png);
+}
+
 .menu {
     padding-top: 50px;
     padding-bottom: 150px;
@@ -283,4 +292,67 @@ a.navbar-brand {
     color: var(--color-primary);
     font-size: 24px;
 
+}
+
+.card-item .add-buy {
+    display: none;
+    text-align: center;
+    height: 30px;
+    justify-content: center;
+    align-items: center;
+}
+
+.btn-minus {
+    color: var(--color-black-heavy);
+    padding: 5px 7px;
+    border: 2px solid var(--color-black-heavy);
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    font-size: 14px;
+    cursor: pointer;
+}
+
+.btn-plus {
+    color: var(--color-black-heavy);
+    padding: 5px 7px;
+    border: 2px solid var(--color-black-heavy);
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    font-size: 14px;
+    cursor: pointer;
+}
+
+.add-number-itens {
+    color: var(--color-black-heavy);
+    padding: 2px 15px;
+    border-top: 2px solid var(--color-black-heavy);
+    border-bottom: 2px solid var(--color-black-heavy);
+    font-size: 18px;
+} 
+
+.btn-add {
+    border: 2px solid var(--color-black-heavy);
+    font-size: 16px;
+    padding: 4px 10px;
+    border-radius: 10px;
+    color: var(--color-white);
+    background-color: var(--color-black);
+    margin-left: 15px;
+}
+
+.card-item:hover {
+    background-color: var(--color-primary);
+}
+
+.card-item:hover .title-product {
+    display: none;
+}
+
+.card-item:hover .add-buy {
+    display: flex;
+}
+
+.card-item:hover .price-product {
+    color: var(--color-black-heavy) !important;
+    margin-top: 20px;
 }
