--- a/css/main.css
+++ b/css/main.css
@@ -356,3 +356,17 @@ a.navbar-brand {
     color: var(--color-black-heavy) !important;
     margin-top: 20px;
 }
+
+.depositions {
+    padding-top: 100px;
+    padding-bottom: 150px;
+}
+
+.card-depositions {
+    height: 390px;
+    width: 390px;
+    border-radius: 120px;
+    background-color: var(--color-secondaary);
+    position: absolute;
+    left: 0;
+}
