--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@
     --color-text: #4f4f4f;
     --color-text-out: #90908e;
     --color-primary: #ffbf00;
-    --color-secondaary: #fff2cc;
+    --color-secondary: #fff2cc;
     --color-white: #fff;
     --color-red: #e74c3c;
     --color-green: #2ecc71;
@@ -378,7 +378,7 @@ a.navbar-brand {
     height: 390px;
     width: 390px;
     border-radius: 120px;
-    background-color: var(--color-secondaary);
+    background-color: var(--color-secondary);
     position: absolute;
     left: 0;
 }
@@ -451,4 +451,30 @@ a.navbar-brand {
     display: flex;
     justify-content: center;
     align-items: end;
+}
+
+.book {
+    padding-top: 100px;
+    padding-bottom: 150px;
+}
+
+.card-secondary {
+    background-color: var(--color-secondary);
+    border-radius: 70px;
+    padding: 90px;
+}
+
+.card-book {
+    height: 320px;
+    width: 320px;
+    border-radius: 120px;
+    background-color: var(--color-white);
+    position: absolute;
+    right: 0;
+    top: -25px;
+}
+
+.book .img-banner img{
+    width: 70%;
+    top: 0px;
 }
