--- a/css/main.css
+++ b/css/main.css
@@ -26,6 +26,7 @@ html, body {
     font-family: 'PoppinssRegular', 'Rubik', sans-serif;
     background-color: var(--color-bg);
     color: var(--color-text);
+    overflow-x: hidden;
 }
 
 b {
