--- a/css/main.css
+++ b/css/main.css
@@ -528,3 +528,131 @@ footer {
     overflow: auto;
     overflow-x: hidden;
 }
+
+.m-body::-webkit-scrollbar {
+    width: 6px;
+    background: transparent;
+}
+
+.m-body::-webkit-scrollbar-thumb {
+    background: var(--color-white);
+}
+
+.m-body::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+.steps {
+    display: flex;
+}
+
+.step {
+    width: 35px;
+    height: 35px;
+    background-color: var(--color-white);
+    border-radius: 50px;
+    box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
+    color: var(--color-black);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: var(--color-black);
+    margin-right: 20px;
+}
+
+.step::before {
+    content: '';
+    width: 20px;
+    background-color: var(--color-separate);
+    position: absolute;
+    height: 2px;
+    margin-left: 55px;
+}
+
+.step:last-child::before {
+    content: none;
+}
+
+.step.active, .step.active::before {
+    background-color: var(--color-primary);
+}
+
+.title-shopping {
+    font-size: 20px;
+    color: var(--color-black);
+}
+
+.modal-full .item-shopping {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px 0;
+    border-bottom: 1px solid var(--color-separate);
+}
+
+.modal-full .item-shopping:last-child {
+    border-bottom: none;
+}
+
+.modal-full .img-product img{
+    width: 100px;
+    border-radius: 11px;
+}
+
+.modal-full .title-product {
+    color: var(--color-black);
+    font-size: 20px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    margin-bottom: 0;
+}
+
+.modal-full .price-product {
+    color: var(--color-primary);
+    font-size: 24px;
+    margin-bottom: 0;
+}
+
+.modal-full .data-products {
+    flex: 1;
+    padding: 0 25px;
+}
+
+.modal-full .add-buy {
+    display: flex;
+    text-align: center;
+    height: 30px;
+    justify-content: center;
+    align-items: center;
+}
+
+.btn-remove {
+    border: 2px solid var(--color-red);
+    font-size: 16px;
+    padding: 4px 10px;
+    border-radius: 10px;
+    color: var(--color-white);
+    background-color: var(--color-red);
+    margin-left: 15px;
+}
+
+.container-total {
+    padding-top: 20px;
+    border-top: 1px solid var(--color-separate);
+}
+
+.container-total .text-delivery {
+    color: var(--color-separate);
+}
+
+.container-total .text-total{
+    color: var(--color-black);
+    font-size: 20px;
+    margin-top: 10px;
+}
+
+.container-total .value-total {
+    color: var(--color-primary);
+    font-size: 24px;
+}
